<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="8dp"

        android:lines="2"
        android:maxLines="2"
        android:text="@string/settings_radius_welcome"
        style="@style/text_title"
        app:layout_constraintBottom_toTopOf="@id/distance_seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        />

    <SeekBar
        android:id="@+id/distance_seekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:scrollbarSize="32dp"
        android:scrollbarStyle="insideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        />

    <TextView
        android:id="@+id/radius_indicator_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintVertical_bias="0.3"
        android:text="@string/text_radius_indicator"

        app:layout_constraintTop_toBottomOf="@id/distance_seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/rad_btn"
        />

    <Button
        android:id="@+id/rad_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/done"

        app:layout_constraintTop_toBottomOf="@id/radius_indicator_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.9"

        />
</androidx.constraintlayout.widget.ConstraintLayout>